--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/public/stylesheets/styles.css">
     <link rel="stylesheet" href="/public/stylesheets/login.css">
     <link rel="stylesheet" href="/public/stylesheets/nav.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
