--- a/public/stylesheets/portfolio.scss
+++ b/public/stylesheets/portfolio.scss
@@ -111,10 +111,10 @@ section.awSlider img {
   background-repeat:   no-repeat;
   background-size:     cover;
   pointer-events: none;
-
 }
 
 .comments {
+  box-shadow: 0px 0px 130px 44px rgba(0,0,0,0.86);
   background: rgba(0, 0, 0, 0.4);
   width: 100%;
   position: absolute;
@@ -204,6 +204,9 @@ section.awSlider > img{
     textarea:focus {
       outline: none;
     }
+    label {
+      color: #cecece !important;
+    }
   }
   .form-group {
     margin: 30px 20px 30px auto;
@@ -289,4 +292,21 @@ hr {
   width: 45px;
   margin-left: 30px;
   margin-bottom: 10px;
+}
+
+@media (max-width: 770px) {
+  .navbar-fixed-left {
+    top: 0 !important;
+    position: relative !important;
+  }
+  section.awSlider img {
+    //max-height: 500px;
+  }
+
+}
+@media (max-width: 1100px) {
+  .form-group {
+    width: 330px;
+    margin: 40px auto;
+  }
 }
